--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -1,11 +1,11 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  background: rgba(64, 224, 208, 0.705);
+  border-radius: 25px;
+  width: 1500px;
+  margin: fixed;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.5em;
 }
 
 .App-header {
@@ -23,11 +23,6 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-intro {
+  margin-top: 5%;
 }
